applications/demoapp-02/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demoapp02-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
